# ai-classifier

./: app.py  data.csv  model_pipeline.pkl  predict.py  pyproject.toml  render.yaml  requirements.txt  train_model.py
