[project]
name = "ai-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "usame1997",email = "ly1997.sy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.52.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
