[tool.poetry]
name = "ai-classifier"
version = "0.1.0"
description = ""
authors = ["usame1997 <ly1997.sy@gmail.com>"]
package-mode = false  # ⬅️ أضف هذا السطر


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
torch = "^2.0.1"
transformers = "^4.52.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
